# neo_f3kdb

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  main.cpp  version.rc.in
VCL2/: vectorf128.h  vectorf256.h  vectorf512.h  vectori128.h  vectori256.h  vectori512.h  vectori512s.h
debian/: changelog  control  copyright  rules
include/: f3kdb.h  f3kdb_enums.h
include/dualsynth/: avs_wrapper.hpp  ds_common.hpp  ds_filter.hpp  ds_format.hpp  ds_frame.hpp  ds_videoinfo.hpp  vs_wrapper.hpp
src/: avx_utils.h  compiler_compat.h  constants.h  core.cpp  core.h  cpuid.cpp  cpuinfo_x86.c  debug_dump.h  dither_high.h  f3kdb.h  f3kdb.hpp  flash3kyuu_deband_avx2_base.h  flash3kyuu_deband_avx512_base.h  flash3kyuu_deband_impl_avx2.cpp  flash3kyuu_deband_impl_avx512.cpp  flash3kyuu_deband_impl_c.cpp  flash3kyuu_deband_impl_sse2.cpp  flash3kyuu_deband_impl_sse4.cpp  flash3kyuu_deband_impl_ssse3.cpp  flash3kyuu_deband_sse_base.h  impl_dispatch.cpp  impl_dispatch_decl.h  neo_f3kdb.hpp  pixel_proc_c_high_f_s_dithering.h  pixel_proc_c_high_ordered_dithering.h  process_plane_context.cpp  public_interface.cpp  random.cpp  random.h  simd_shared.h  sse_compat.h  version.hpp  version.hpp.in  version.rc  version.rc.in
src/arm/: x86intrin.h
src/avisynth/: avisynth_plugin_v6.cpp  check.hpp  filter_impl.hpp  mt_info.hpp
src/simd/: T_AVX2.hpp  T_SSE4.hpp  T_shared.inc  T_shared_low.inc  dither_high.h  engine.hpp  simd_utils.h
src/vapoursynth/: plugin.cpp  plugin.h
